--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-event-organiser",
+  "name": "ai-event-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -34,22 +34,23 @@
     "embla-carousel-react": "^8.6.0",
     "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.552.0",
-    "next": "latest",
+    "next": "^14.2.25",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.0",
     "react-qr-code": "^2.0.18",
     "react-spinners": "^0.17.0",
+    "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "latest",
+    "eslint": "^8",
+    "eslint-config-next": "^14.2.25",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
